# atelier

./: .gitignore  AGENTFACTORY.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DOLT_REMOTE.md  LICENSE  PRODUCT_INTENT.md  README.md  SPEC.md  build.rs  dbguhuofmcnnstelphnkcmnv3rtuh32j  dgvjhkvnghugaegiko4c8jkgjsud22gt  manifest
.atelier/: config.toml  workflow.yaml
.atelier-state/: graph.json  manifest.json
.atelier-state/evidence/: atelier-2yxv.md  atelier-35xf.md  atelier-5zt6.md  atelier-b8zm.md  atelier-fi6l.md  atelier-kpp5.md  atelier-np2r.md  atelier-p93l.md  atelier-rodj.md  atelier-tm8c.md  atelier-uu8j.md  atelier-xyu4.md  atelier-zr8x.md
.atelier-state/issues/: ISS-0001.md  ISS-0002.md  ISS-0003.md  ISS-0004.md  ISS-0005.md  ISS-0006.md  ISS-0007.md  ISS-0008.md  ISS-0009.md  ISS-0010.md  ISS-0011.md  ISS-0012.md  ISS-0013.md  ISS-0014.md  ISS-0015.md  ISS-0016.md  ISS-0017.md  ISS-0018.md  ISS-0019.md  ISS-0020.md  ISS-0021.md  ISS-0022.md  ISS-0023.md  ISS-0024.md  ISS-0025.md  ISS-0026.md  ISS-0027.md  ISS-0028.md  ISS-0029.md  ISS-0030.md  ISS-0031.md  ISS-0032.md  ISS-0033.md  ISS-0034.md  ISS-0035.md  ISS-0036.md  ISS-0037.md  ISS-0038.md  ISS-0039.md  ISS-0040.md  (+214 more)
.atelier-state/missions/: atelier-2g51.md  atelier-2nc9.md  atelier-6i3y.md  atelier-8bky.md  atelier-dvxc.md  atelier-g28t.md  atelier-n8ag.md  atelier-nc18.md  atelier-ny4e.md  atelier-onba.md  atelier-ufgn.md  atelier-wd56.md  atelier-zum5.md
.atelier/evidence/: atelier-00d1.md  atelier-06rb.md  atelier-06u8.md  atelier-07ek.md  atelier-07on.md  atelier-0a0v.md  atelier-0c13.md  atelier-0cqu.md  atelier-0gd6.md  atelier-0hc7.md  atelier-0i5d.md  atelier-0lx7.md  atelier-0m0l.md  atelier-0mj6.md  atelier-0mj7.md  atelier-0n3g.md  atelier-0ook.md  atelier-0pi2.md  atelier-0wc1.md  atelier-0x5o.md  atelier-0xqf.md  atelier-0z8g.md  atelier-0zaj.md  atelier-0zo5.md  atelier-126s.md  atelier-13kj.md  atelier-13xp.md  atelier-14nz.md  atelier-15qb.md  atelier-168n.md  atelier-17z9.md  atelier-18f2.md  atelier-18nk.md  atelier-191m.md  atelier-1awr.md  atelier-1bq8.md  atelier-1bq9.md  atelier-1e0n.md  atelier-1f25.md  atelier-1gqm.md  (+795 more)
.atelier/issues/: atelier-0001.md  atelier-0002.md  atelier-0003.md  atelier-0004.md  atelier-0005.md  atelier-0006.md  atelier-0007.md  atelier-0008.md  atelier-0009.md  atelier-000a.md  atelier-000b.md  atelier-000c.md  atelier-000d.md  atelier-000e.md  atelier-000f.md  atelier-000g.md  atelier-000h.md  atelier-000i.md  atelier-000j.md  atelier-000k.md  atelier-000l.md  atelier-000m.md  atelier-000n.md  atelier-000o.md  atelier-000p.md  atelier-000q.md  atelier-000r.md  atelier-000s.md  (+903 more)
.beads/: ARCHIVED.md  README.md  config.yaml  interactions.jsonl  issues.jsonl  issues.manual.jsonl  metadata.json
.cargo/: mutants.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md
crates/atelier-app/: Cargo.toml
crates/atelier-app/src/: command_storage.rs  command_surface.rs  evidence.rs  export.rs  forgejo.rs  graph.rs  health.rs  init.rs  issue.rs  issue_read.rs  lib.rs  lint.rs  maintenance.rs  mission.rs  objective_graph.rs  pr.rs  project_config.rs  projection.rs  read_pipeline.rs  rebuild.rs  review_room.rs  status.rs  test_inventory.rs  use_cases.rs  user_config.rs  workflow.rs  workflow_policy.rs  workflow_validation.rs
crates/atelier-cli/: Cargo.toml
crates/atelier-cli/src/: activity.rs  command_storage.rs  command_surface.rs  human_output.rs  identity.rs  issue_cli.rs  lib.rs  main.rs  models.rs  projection_index.rs  record_id.rs  telemetry.rs  workflow_policy.rs
crates/atelier-cli/src/commands/: activity_log.rs  agent_factory.rs  bundle.rs  comment.rs  create.rs  delete.rs  deps.rs  evidence.rs  export.rs  forgejo.rs  history.rs  import.rs  init.rs  issue.rs  issue_status.rs  issue_workflow.rs  label.rs  man.rs  mission.rs  mod.rs  next.rs  objective_status.rs  plan.rs  pr.rs  prune.rs  rebuild.rs  relate.rs  session.rs  status.rs  tested.rs  tree.rs  work.rs  work_order.rs  workflow.rs  workflow_actions.rs  workflow_planning.rs
crates/atelier-cli/src/db/: comments.rs  issues.rs  mod.rs  records.rs  relations.rs  sessions.rs  tests.rs  work.rs
crates/atelier-cli/tests/: cli_integration.rs
crates/atelier-cli/tests/cli_integration/: issues.rs  legacy_surfaces.rs  mission_projection_worktree.rs  records_evidence.rs  sessions.rs  setup_guidance.rs  unicode.rs
crates/atelier-cli/tests/fixtures/beads/: issues.manual.jsonl
crates/atelier-cli/tests/smoke/: adversarial.rs  cli_data.rs  concurrency.rs  harness.rs  lifecycle.rs  mod.rs
crates/atelier-core/: Cargo.toml
crates/atelier-core/src/: lib.rs  models.rs  record_id.rs  relationships.rs
crates/atelier-core/tests/: domain_invariants.rs
crates/atelier-records/: Cargo.toml
crates/atelier-records/src/: activity.rs  document.rs  evidence.rs  issue.rs  lib.rs  mission.rs  record_id.rs  record_kinds.rs  relationships.rs  store.rs  validation.rs
crates/atelier-records/tests/: canonical_records.rs
crates/atelier-records/tests/fixtures/canonical_state/milestones/: atelier-0msn.md
crates/atelier-records/tests/fixtures/canonical_state/plans/: atelier-0pln.md
crates/atelier-sqlite/: Cargo.toml
crates/atelier-sqlite/src/: comments.rs  dependencies.rs  issues.rs  labels.rs  lib.rs  projection_index.rs  proptest_tests.rs  records.rs  relations.rs  sessions.rs  tests.rs  work.rs
crates/atelier-sqlite/tests/: projection_contract.rs
crates/atelier-workflow/: Cargo.toml
crates/atelier-workflow/src/: lib.rs
crates/atelier-workflow/tests/: policy_contract.rs
docs/: index.md
fuzz/: Cargo.toml
proptest-regressions/: db.txt
resources/: mcp.json
scripts/: check_crate_migration_closeout.py  migrate_sqlite_comments_to_activity.py
src/: activity.rs  command_storage.rs  command_surface.rs  daemon.rs  identity.rs  lib.rs  lock_check.rs  locks.rs  main.rs  models.rs  projection_index.rs  record_id.rs  record_store.rs  storage_layout.rs  sync.rs  telemetry.rs  token_usage.rs  utils.rs  workflow_policy.rs
tests/: cli_integration.rs
(+5445 files in other folders)
