[package]
name = "chainlink-tracker"
version = "0.2.0"
edition = "2021"
description = "A lean issue tracker CLI for AI-assisted development sessions"
license = "MIT"
repository = "https://github.com/dollspace-gay/chainlink"
homepage = "https://github.com/dollspace-gay/chainlink"
readme = "../README.md"
keywords = ["issue-tracker", "cli", "ai-development", "session-management", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "resources/**/*",
    "!**/__pycache__/**",
    "build.rs",
    "LICENSE",
]

[lib]
name = "chainlink"
path = "src/lib.rs"

[[bin]]
name = "chainlink"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
signal-hook = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
arbitrary = "1"
