[package]
name = "atelier-tracker"
version = "0.2.0"
edition = "2021"
description = "A lean issue tracker CLI for AI-assisted development sessions"
license = "MIT"
repository = "https://github.com/dollspace-gay/atelier"
homepage = "https://github.com/dollspace-gay/atelier"
readme = "README.md"
keywords = ["issue-tracker", "cli", "ai-development", "session-management", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "resources/**/*",
    "!**/__pycache__/**",
    "build.rs",
    "LICENSE",
]

[workspace]
members = [
    ".",
    "crates/atelier-core",
    "crates/atelier-workflow",
    "crates/atelier-records",
    "crates/atelier-sqlite",
    "crates/atelier-app",
    "crates/atelier-cli",
]
default-members = [
    ".",
    "crates/atelier-core",
    "crates/atelier-workflow",
    "crates/atelier-records",
    "crates/atelier-sqlite",
    "crates/atelier-app",
    "crates/atelier-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/dollspace-gay/atelier"
homepage = "https://github.com/dollspace-gay/atelier"
keywords = ["issue-tracker", "cli", "ai-development", "session-management", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "atelier"
path = "src/lib.rs"

[[bin]]
name = "atelier"
path = "src/main.rs"

[dependencies]
atelier-core = { path = "crates/atelier-core" }
rusqlite = { version = "0.38", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sha2 = "0.10"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
proptest = "1"
arbitrary = "1"
