[package]
name = "atelier-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Application use-case contracts for Atelier"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
atelier-core = { path = "../atelier-core" }
atelier-records = { path = "../atelier-records" }
atelier-sqlite = { path = "../atelier-sqlite" }
atelier-workflow = { path = "../atelier-workflow" }
