[package]
name = "atelier-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI shell contracts for Atelier"

[lib]
path = "src/lib.rs"

[dependencies]
atelier-app = { path = "../atelier-app" }
