[package]
name = "atelier-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core domain types for Atelier"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
