[package]
name = "atelier-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SQLite projection and runtime contracts for Atelier"

[lib]
path = "src/lib.rs"

[dependencies]
atelier-core = { path = "../atelier-core" }
atelier-records = { path = "../atelier-records" }
atelier-workflow = { path = "../atelier-workflow" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.38", features = ["bundled"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
