[package]
name = "atelier-sqlite"
description = "Rebuildable SQLite projection and runtime state for Atelier"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
atelier-core = { path = "../atelier-core" }
atelier-records = { path = "../atelier-records" }
atelier-workflow = { path = "../atelier-workflow" }
anyhow.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3"
