[package]
name = "atelier-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Workflow policy contracts for Atelier"

[lib]
path = "src/lib.rs"

[dependencies]
atelier-core = { path = "../atelier-core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
